removed svg:not:root browser-quirk fix, it's covered by normalize

--- a/templates/travel/partials/icon/_icon.css
+++ b/templates/travel/partials/icon/_icon.css
@@ -29,10 +29,6 @@
   color: white;
 }
 
-.travel-icon:not(:root) {
-  overflow: visible;
-}
-
 .travel-img-icon-checkmark-purple {
   background-image: url(../../img/travel/icon/checkmark-purple.png);
 }
